--- a/Seguimiento.html
+++ b/Seguimiento.html
@@ -86,27 +86,16 @@
         
       </select>
 
-      <div class="input-group flex-nowrap">
-        <input
-          id="entrega"
-          type="text"
-          class="form-control my-3"
-          placeholder="Entrega?"
-          aria-label="Username"
-          aria-describedby="addon-wrapping"
-        />
-      </div>
-
-      <div class="input-group flex-nowrap">
-        <input
-          id="recibe"
-          type="text"
-          class="form-control my-3"
-          placeholder="Recibe?"
-          aria-label="Username"
-          aria-describedby="addon-wrapping"
-        />
-      </div>
+      <select
+      id="diponibilidad"
+      class="form-select my-3"
+      aria-label="Default select example"
+    >
+      <option disabled selected>Disponibilidad?</option>
+      <option value="Ingenieria">En proceso</option>
+      <option value="Moldeo">Otro</option>
+      
+    </select>
 
       <div class="input-group flex-nowrap my-3">
         <span class="input-group-text" id="addon-wrapping">Fecha :</span>
