--- a/Ubicacion.html
+++ b/Ubicacion.html
@@ -89,9 +89,9 @@
         aria-label="Default select example"
       >
         <option disabled selected>Parte del modelo :</option>
-        <option value="MC">MODELO COMPLETO</option>
-        <option value="M">MODELO</option>
-        <option value="CDC">CAJAS DE CORAZÓN</option>
+        <option value="MODELO COMPLETO">MODELO COMPLETO</option>
+        <option value="MODELO">MODELO</option>
+        <option value="CAJAS DE CORAZÓN">CAJAS DE CORAZÓN</option>
         
       </select>
 
@@ -134,6 +134,7 @@
 
       <div class="d-grid gap-2">
         <button
+        id="btn-registrar"
           onclick="reubicacion()"
           class="btn btn-success my-3"
           type="button"
@@ -150,7 +151,9 @@
       />
 
       <div  id="admin2">
+        <div id="tab3" class="container my-5"></div>
         <div id="tab" class="container my-5"></div>
+        
       </div>
     </div>
     <script src="JS/App.js"></script>
